# AF-agent

./: .dockerignore  .gitignore  AGENTBEATS_DEPLOYMENT.md  Dockerfile  Dockerfile.autoform  Dockerfile.baseline  Dockerfile.green  README.md  deploy_autoform.sh  deploy_baseline.sh  deploy_green.sh  entrypoint.sh  env.example  main.py  pyproject.toml  quick_local_test.sh  run.sh  test_deployed_agents.py  test_simple.py  流程说明.md
.github/workflows/: test-and-publish.yml
data/folio-wiki/: cleaned-FOLIO-by-yifeng.csv  dev.csv
src/: launcher.py
src/folio_utils/: dataset.py  fol_to_tptp.py  vampire_runner.py
src/green_agent/: agent.py  folio_green_agent.toml
src/my_util/: __init__.py  my_a2a.py
src/white_agent_autoform/: agent.py
src/white_agent_baseline/: agent.py
tests/: __init__.py  conftest.py  test_agent.py
