[project]
name = "folio-benchmark"
version = "1.0.0"
description = "FOLIO Logical Reasoning Benchmark for AgentBeats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "earthshaker>=0.1.0",
    "litellm>=1.0.0",
    "pandas>=2.0.0",
    "typer>=0.9.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folio_utils", "src/green_agent", "src/my_util", "src/white_agent_autoform", "src/white_agent_baseline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.uv]
dev-dependencies = []

